--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,18 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
 
+  test-db:
+    image: postgres:15
+    container_name: nestjs-postgres-test
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: test_db
+    volumes:
+      - test-db-data:/var/lib/postgresql/data
+
 volumes:
   db-data:
+  test-db-data:
